--- a/dexter/build.gradle
+++ b/dexter/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply from: 'https://raw.githubusercontent.com/chrisbanes/gradle-mvn-push/97de89785bdbf0bc0b380fb60851cabc552811dc/gradle-mvn-push.gradle'
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion 31
 
   defaultConfig {
     minSdkVersion 14
-    targetSdkVersion 28
+    targetSdkVersion 31
     versionCode 1
     versionName "1.0"
     consumerProguardFiles 'proguard-rules.pro'
@@ -25,8 +25,8 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'com.google.android.material:material:1.0.0'
-  testImplementation 'junit:junit:4.12'
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'com.google.android.material:material:1.2.0-alpha02'
+  testImplementation 'junit:junit:4.13'
   testImplementation 'org.mockito:mockito-core:2.28.2'
 }
