--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion 30
 
   defaultConfig {
     applicationId "com.karumi.dexter.sample"
     minSdkVersion 18
-    targetSdkVersion 28
+    targetSdkVersion 30
     versionCode 1
     versionName "1.0"
 
@@ -33,14 +33,14 @@ android {
 dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation project(':dexter')
-  implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'com.google.android.material:material:1.0.0'
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'com.google.android.material:material:1.2.0-alpha02'
   implementation 'com.jakewharton:butterknife:10.1.0'
-  debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
+  debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
   annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-  androidTestImplementation 'androidx.test:runner:1.2.0'
-  androidTestImplementation 'androidx.test:rules:1.2.0'
+  androidTestImplementation 'androidx.test:runner:1.4.0'
+  androidTestImplementation 'androidx.test:rules:1.4.0'
   androidTestImplementation 'org.awaitility:awaitility:3.0.0'
   androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-  androidTestImplementation 'androidx.test:rules:1.2.0'
+  androidTestImplementation 'androidx.test:rules:1.4.0'
 }
