--- a/dexter/build.gradle
+++ b/dexter/build.gradle
@@ -7,8 +7,8 @@ android {
   defaultConfig {
     minSdkVersion 14
     targetSdkVersion 31
-    versionCode 1
-    versionName "1.0"
+    versionCode 20220105
+    versionName "1.0.0"
     consumerProguardFiles 'proguard-rules.pro'
     testInstrumentationRunner "android.test.InstrumentationTestRunner"
   }
